# ComfyUI-PanoCard

./: LICENSE  README.md  __init__.py  convert.py  distort.py  misc.py  pano.py  pyproject.toml
web/: visualization.js
web/html/: threeVisualizer.html
web/js/: threeVisualizer.js
workflows/: 1_单次生成全景图6个面.json  2_调节全景图uv偏移增加文字.json  3_平面图拉伸扩展为全景图.json  4_平面图组合转换为全景图.json  5_单张图片分割组合为全景图.json  6_手动调整组合全景图json.json  7_区域提示词生成全景图.json
